// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders large 1`] = `
<ResponsiveComponent
  responsiveSize="large"
>
  <SomeComponent
    responsiveSize="large"
  >
    <div
      data-sz="large"
    >
      hello world
    </div>
  </SomeComponent>
</ResponsiveComponent>
`;

exports[`renders medium 1`] = `
<ResponsiveComponent
  responsiveSize="large"
>
  <SomeComponent
    responsiveSize="large"
  >
    <div
      data-sz="large"
    >
      hello world
    </div>
  </SomeComponent>
</ResponsiveComponent>
`;

exports[`renders medium 2`] = `
<ResponsiveComponent
  responsiveSize="large"
>
  <SomeComponent
    responsiveSize="medium"
  >
    <div
      data-sz="medium"
    >
      hello world
    </div>
  </SomeComponent>
</ResponsiveComponent>
`;
